--- a/blog-ar.html
+++ b/blog-ar.html
@@ -1,16 +1,15 @@
 
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
-</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="استكشف رؤى واتجاهات وقصص من عالم التعليم على مدونة معرض قطر للتعليم 2026 الرسمية. ابق على اطلاع حول الدراسة في الخارج وتكنولوجيا التعليم والإرشاد المهني.">
@@ -48,10 +47,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="شعار معرض قطر للتعليم 2026"></a>
+            <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="شعار معرض قطر للتعليم 2026"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -94,7 +97,6 @@
                             <li><a href="sponsorship-registration-ar.html">كن راعيًا</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog-ar.html" class="nav-link">المدونة</a></li>
                     <li><a href="contact-ar.html" class="nav-link">اتصل بنا</a></li>
                 </ul>
             </nav>
@@ -102,7 +104,7 @@
                 <a href="booth-registration-ar.html" class="btn btn-primary btn-sm">احجز جناحك</a>
                 <a href="sponsorship-registration-ar.html" class="btn btn-primary btn-sm">كن راعيًا</a>
                 <div class="lang-switcher">
-                    <a href="blog.html" hreflang="en" aria-label="Switch to English"><span>English</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/gb.svg" alt="UK Flag" class="lang-flag"></a>
+                    <a href="blog.html" hreflang="en" aria-label="Switch to English"><span>English</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/gb.svg" alt="علم المملكة المتحدة" class="lang-flag"></a>
                 </div>
             </div>
         </div>
@@ -124,12 +126,12 @@
                         <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/w_600,q_auto,f_auto/v1762646675/Gemini_Generated_Image_3_pmhubm.jpg" alt="رسم بياني مستقبلي يمثل الذكاء الاصطناعي ونقاط البيانات في سياق تعليمي." class="article-card__image">
                         <div class="article-card__content">
                             <h3>استكشاف المستقبل: كيف يعيد الذكاء الاصطناعي تشكيل القبول الجامعي</h3>
-                            <p class="article-card__excerpt">لم يعد الذكاء الاصطناعي مفهومًا مستقبليًا؛ بل هو حقيقة واقعة اليوم تغير الطريقة التي تختار بها الجامعات طلابها المستقبليين. اكتشف الطرق الرئيسية التي يترك بها الذكاء الاصطناعي بصمته...</p>
+                            <p class="article-card__excerpt">لم يعد الذكاء الاصطناعي مفهوماً مستقبلياً؛ بل هو حقيقة واقعة اليوم تغير الطريقة التي تختار بها الجامعات طلابها المستقبليين. اكتشف الطرق الرئيسية التي يترك بها الذكاء الاصطناعي بصمته...</p>
                             <span class="article-card__read-more">اقرأ المزيد &larr;</span>
                         </div>
                     </a>
-                    <!-- Article Card 2 (Placeholder) -->
-                    <a href="#" class="article-card">
+                    <!-- Article Card 2 -->
+                    <a href="blog-post-2-ar.html" class="article-card">
                         <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/w_600,q_auto,f_auto/v1762646674/Gemini_Generated_Image_2_j9fxtc.jpg" alt="مجموعة صور لمناظر طبيعية من بلدان مختلفة مثل اليابان وكوريا الجنوبية وألمانيا." class="article-card__image">
                         <div class="article-card__content">
                             <h3>5 وجهات للدراسة في الخارج لم تفكر بها (لكن يجب عليك)</h3>
@@ -137,9 +139,9 @@
                             <span class="article-card__read-more">اقرأ المزيد &larr;</span>
                         </div>
                     </a>
-                    <!-- Article Card 3 (Placeholder) -->
-                    <a href="#" class="article-card">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/w_600,q_auto,f_auto/v1762646673/Gemini_Generated_Image_1_b31j51.jpg" alt="طالب يعمل على مشروع إبداعي، محاط بالرسومات وجهاز كمبيوتر محمول وكاميرا." class="article-card__image">
+                    <!-- Article Card 3 -->
+                    <a href="blog-post-3-ar.html" class="article-card">
+                        <img src="https://media.gettyimages.com/id/513314751/video/four-students-using-a-digital-tablet.jpg?s=640x640&k=20&c=AG63IiUyD4eHohQab0m1B4OAOpCwP9S4RUFCGqb4QaA=" alt="طالب يعمل على مشروع إبداعي، محاط بالرسومات وجهاز كمبيوتر محمول وكاميرا." class="article-card__image">
                         <div class="article-card__content">
                             <h3>من الفصل الدراسي إلى الحياة المهنية: بناء ملف أعمال طلابي متميز</h3>
                             <p class="article-card__excerpt">درجاتك هي جزء واحد فقط من القصة. تعلم كيفية بناء ملف أعمال من المشاريع والخبرات والمهارات التي تجذب انتباه أفضل الجامعات وأصحاب العمل في المستقبل.</p>
@@ -151,11 +153,13 @@
         </section>
     </main>
 
+    <div id="cookie-banner"></div>
+
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="شعار معرض قطر للتعليم 2026"></a>
+                    <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="شعار معرض قطر للتعليم 2026"></a>
                     <p>الحدث الرائد الذي يجمع قادة التعليم والمؤسسات والمبتكرين في منطقة الشرق الأوسط وشمال أفريقيا.</p>
                 </div>
                 <div class="footer-col">
@@ -190,7 +194,7 @@
                         </li>
                         <li>
                             <i class="fas fa-phone"></i>
-                            <a href="tel:+97474449111">+974 7444 9111</a>
+                            <a href="tel:+97474449111" dir="ltr">+974 7444 9111</a>
                         </li>
                     </ul>
                     <div class="social-links">
