--- a/blog.html
+++ b/blog.html
@@ -1,16 +1,26 @@
 
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('consent', 'default', {
+      'analytics_storage': 'denied',
+      'ad_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'wait_for_update': 500
+    });
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore insights, trends, and stories from the world of education on the official Qatar Education Expo 2026 blog. Stay informed about study abroad, EdTech, and career guidance.">
@@ -47,10 +57,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -93,7 +107,6 @@
                             <li><a href="sponsorship-registration.html">Become a Sponsor</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html" class="nav-link">Blog</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
@@ -127,8 +140,8 @@
                             <span class="article-card__read-more">Read More &rarr;</span>
                         </div>
                     </a>
-                    <!-- Article Card 2 (Placeholder) -->
-                    <a href="#" class="article-card">
+                    <!-- Article Card 2 -->
+                    <a href="blog-post-2.html" class="article-card">
                         <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/w_600,q_auto,f_auto/v1762646674/Gemini_Generated_Image_2_j9fxtc.jpg" alt="A collage of scenic images from various countries like Japan, South Korea, and Germany." class="article-card__image">
                         <div class="article-card__content">
                             <h3>5 Study Abroad Destinations You Haven't Considered (But Should)</h3>
@@ -136,8 +149,8 @@
                             <span class="article-card__read-more">Read More &rarr;</span>
                         </div>
                     </a>
-                    <!-- Article Card 3 (Placeholder) -->
-                    <a href="#" class="article-card">
+                    <!-- Article Card 3 -->
+                    <a href="blog-post-3.html" class="article-card">
                         <img src="https://media.gettyimages.com/id/513314751/video/four-students-using-a-digital-tablet.jpg?s=640x640&k=20&c=AG63IiUyD4eHohQab0m1B4OAOpCwP9S4RUFCGqb4QaA=" alt="A student working on a creative project, surrounded by sketches, a laptop, and a camera." class="article-card__image">
                         <div class="article-card__content">
                             <h3>From Classroom to Career: Building a Standout Student Portfolio</h3>
@@ -150,11 +163,13 @@
         </section>
     </main>
 
+    <div id="cookie-banner"></div>
+
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
