--- a/booth-features-ar.html
+++ b/booth-features-ar.html
@@ -1,16 +1,15 @@
 
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
-</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="اكتشف باقات أجنحة العارضين في معرض قطر للتعليم 2026. قارن بين فئات الأساسي والفضي والذهبي والبلاتيني للعثور على المساحة المثالية في معرض الجامعات الرائد في دول مجلس التعاون الخليجي.">
@@ -35,7 +34,7 @@
         "@type": "Organization",
         "name": "معرض قطر للتعليم 2026",
         "url": "/index-ar.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -78,10 +77,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="شعار معرض قطر للتعليم 2026"></a>
+            <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="شعار معرض قطر للتعليم 2026"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -131,7 +134,7 @@
                 <a href="booth-registration-ar.html" class="btn btn-primary btn-sm">احجز جناحك</a>
                 <a href="sponsorship-registration-ar.html" class="btn btn-primary btn-sm">كن راعيًا</a>
                 <div class="lang-switcher">
-                    <a href="booth-features.html" hreflang="en" aria-label="Switch to English"><span>English</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/gb.svg" alt="UK Flag" class="lang-flag"></a>
+                    <a href="booth-features.html" hreflang="en" aria-label="Switch to English"><span>English</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/gb.svg" alt="علم المملكة المتحدة" class="lang-flag"></a>
                 </div>
             </div>
         </div>
@@ -256,11 +259,12 @@
 
     </main>
     
+    <div id="cookie-banner"></div>
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="شعار معرض قطر للتعليم 2026"></a>
+                    <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="شعار معرض قطر للتعليم 2026"></a>
                     <p>الحدث الرائد الذي يجمع قادة التعليم والمؤسسات والمبتكرين في منطقة الشرق الأوسط وشمال أفريقيا.</p>
                 </div>
                 <div class="footer-col">
@@ -271,6 +275,7 @@
                         <li><a href="why-exhibit-ar.html">للعارضين</a></li>
                         <li><a href="sponsorship-tiers-ar.html">للرعاة</a></li>
                         <li><a href="student-registration-ar.html">تسجيل الطلاب</a></li>
+                        <li><a href="blog-ar.html">المدونة</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
@@ -294,7 +299,7 @@
                         </li>
                         <li>
                             <i class="fas fa-phone"></i>
-                            <a href="tel:+97474449111">+974 7444 9111</a>
+                            <a href="tel:+97474449111" dir="ltr">+974 7444 9111</a>
                         </li>
                     </ul>
                     <div class="social-links">
