--- a/booth-features.html
+++ b/booth-features.html
@@ -1,34 +1,35 @@
 
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('consent', 'default', {
+      'analytics_storage': 'denied',
+      'ad_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'wait_for_update': 500
+    });
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore exhibitor booth packages for the Qatar Education Expo 2026. Compare Basic, Silver, Gold, and Platinum tiers to find the perfect space at the leading university fair in the GCC.">
     <title>Exhibitor Booth Packages & Pricing | Qatar Education Expo 2026</title>
-    <link rel="icon" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png" type="image/png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="canonical" href="https://eduexpoqatar.com/booth-features.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/booth-features.html" />
     <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/booth-features-ar.html" />
-    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/booth-features.html" />
-    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/booth-features.html" />
-    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/booth-features.html" />
-    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/booth-features.html" />
-    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/booth-features.html" />
-    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/booth-features.html" />
-    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/booth-features.html" />
-    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/booth-features.html" />
-    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/booth-features.html" />
     <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/booth-features.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,40 +40,74 @@
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
-      },
-      {
-        "@context": "https://schema.org",
         "@type": "BreadcrumbList",
         "itemListElement": [{
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "/index.html"
+          "item": "https://eduexpoqatar.com/index.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "For Exhibitors",
-          "item": "/why-exhibit.html"
+          "item": "https://eduexpoqatar.com/why-exhibit.html"
         },{
           "@type": "ListItem",
           "position": 3,
           "name": "Booth Features"
         }]
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "BASIC PACKAGE",
+        "description": "Standard-row booth (3x3, 9 sqm) with name listing on event website, 2 exhibitor passes, and access to networking lounge.",
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "offers": {
+          "@type": "Offer",
+          "url": "https://eduexpoqatar.com/booth-registration.html?package=Basic",
+          "priceCurrency": "QAR",
+          "availability": "https://schema.org/InStock"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "SILVER PACKAGE",
+        "description": "Priority row booth (4x3, 12 sqm) with logo on event website, name in event catalogs, 3 exhibitor passes, and access to networking lounge with complimentary drinks & snacks.",
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "offers": {
+          "@type": "Offer",
+          "url": "https://eduexpoqatar.com/booth-registration.html?package=Silver",
+          "priceCurrency": "QAR",
+          "availability": "https://schema.org/InStock"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "GOLD PACKAGE",
+        "description": "Prime hall location booth (6x3, 18 sqm) with logo and 50-word catalog feature, 4 passes, 1 speaking slot, 10% off add-ons, and access to networking lounge + Speaker Zone.",
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "offers": {
+          "@type": "Offer",
+          "url": "https://eduexpoqatar.com/booth-registration.html?package=Gold",
+          "priceCurrency": "QAR",
+          "availability": "https://schema.org/InStock"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "PLATINUM PACKAGE",
+        "description": "Entrance corner booth (7x3, 21 sqm) for maximum visibility, with premium furniture, top-tier logo placement, homepage feature, 8 passes, 3 speaking slots, and access to VIP lounge.",
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "offers": {
+          "@type": "Offer",
+          "url": "https://eduexpoqatar.com/booth-registration.html?package=Platinum",
+          "priceCurrency": "QAR",
+          "availability": "https://schema.org/InStock"
+        }
       }
     ]
     </script>
@@ -85,10 +120,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -263,11 +302,13 @@
 
     </main>
     
+    <div id="cookie-banner"></div>
+
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -278,6 +319,7 @@
                         <li><a href="why-exhibit.html">For Exhibitors</a></li>
                         <li><a href="sponsorship-tiers.html">For Sponsors</a></li>
                         <li><a href="student-registration.html">Student Registration</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
